--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Goldman', cursive;
+  font-family: 'IBM Plex Sans', sans-serif;
 }
 
 .home,
@@ -16,7 +16,7 @@
 }
 
 .services {
-  background-image: url('/src/images/img-1.jpg');
+  background-image: linear-gradient(to right, rgba(0, 255, 0, 0.952), rgb(200, 255, 0));
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -25,7 +25,7 @@
 }
 
 .gameroom {
-  background-image: url('/src/images/img-2.jpg');
+  background-image: linear-gradient(to right, rgba(0, 255, 0, 0.952), rgb(200, 255, 0));
   background-position: center;
   background-size: fill;
   background-repeat: no-repeat;
